Add MAVLink to small version

--- a/_layouts/website/page.html
+++ b/_layouts/website/page.html
@@ -2,7 +2,7 @@
 
 {% block body %}
     {% block top_menu_bar %}
-    <!-- ##HW Try adding menu here -->
+    <!-- ##HW Add dronecode menu -->
     <div id="common_dronecode_menu">
       <div class="common_menu_logo large_version">
         <a href="https://www.dronecode.org/">
@@ -21,7 +21,7 @@
         <div class="common_dronecode_menu_item small_version"><a href="http://qgroundcontrol.com/">QGC</a></div>
         <div class="common_dronecode_menu_item"><a href="http://dronecore.io/">DroneCore</a></div>
         <!-- <div class="common_dronecode_menu_item small_versionn"><a href="http://dronecore.io/">&lt;D/C&gt;</a></div> -->
-        <div class="common_dronecode_menu_item large_version"><a href="https://mavlink.io/en/">MAVLink</a></div>
+        <div class="common_dronecode_menu_item"><a href="https://mavlink.io/en/">MAVLink</a></div>
         <div class="common_dronecode_menu_item large_version"><a href="https://www.dronecode.org/documentation/">Documentation</a></div>
         <div class="common_dronecode_menu_item small_version"><a href="https://www.dronecode.org/documentation/">Docs</a></div>
         <div class="common_dronecode_menu_item large_version"><a href="http://discuss.px4.io/">Support</a></div>
@@ -29,7 +29,7 @@
       </div>
     </div>
     {% endblock %}
-<!-- ##HW END Try adding menu here -->
+<!-- ##HW END Add dronecode menu -->
     {{ super() }}
     
 {% endblock %}
