--- a/_layouts/website/page.html
+++ b/_layouts/website/page.html
@@ -6,12 +6,12 @@
     <div id="common_dronecode_menu">
       <div class="common_menu_logo large_version">
         <a href="https://www.dronecode.org/">
-          <img src="{{ "gitbook-plugin-theme-dronecode/images/dronecode_top_bar_logo_full.png"|resolveAsset }}" />
+          <img src="{{ "gitbook-plugin-theme-dronecode/images/dronecode_top_bar_logo_full.png"|resolveAsset }}" alt="Dronecode logo (large)" />
         </a>
       </div>
       <div class="common_menu_logo small_version">
         <a href="https://www.dronecode.org/">
-          <img src="{{ "gitbook-plugin-theme-dronecode/images/dronecode_top_bar_logo_small.png"|resolveAsset }}" />
+          <img src="{{ "gitbook-plugin-theme-dronecode/images/dronecode_top_bar_logo_small.png"|resolveAsset }}" alt="Dronecode logo (small)" />
         </a>
       </div>
       <div class="common_menu_options">
