--- a/assets/theme_styles.css
+++ b/assets/theme_styles.css
@@ -1,5 +1,5 @@
 /* Menu bar at top of page.*/
-#common_dronecode_menu{position: absolute; top: 0px; height:22px; padding:1px; width:100%; background-color:black; margin: 0 auto; font-size:14px;}
+#common_dronecode_menu{position: absolute; z-index:1; top: 0px; height:22px; padding:1px; width:100%; background-color:black; margin: 0 auto; font-size:14px;}
 
 .common_menu_logo{float:left; padding-left:5px;}
 .common_menu_logo img {max-height:18px;} /*Would like to control max height, but seems to be controlled by javascript */
