--- a/_layouts/website/page.html
+++ b/_layouts/website/page.html
@@ -4,27 +4,24 @@
     {% block top_menu_bar %}
     <!-- ##HW Add dronecode menu -->
     <div id="common_dronecode_menu">
+
       <div class="common_menu_logo large_version">
-        <a href="https://www.dronecode.org/">
-          <img src="{{ "gitbook-plugin-theme-dronecode/images/dronecode_top_bar_logo_full.png"|resolveAsset }}" alt="Dronecode logo (large)" />
+        <a href="{{ config.pluginsConfig['theme-dronecode'].logo.url }}">
+          <img src="{{ config.pluginsConfig['theme-dronecode'].logo.logo_large | resolveAsset }}" alt="Dronecode logo (large)" />
         </a>
       </div>
       <div class="common_menu_logo small_version">
-        <a href="https://www.dronecode.org/">
-          <img src="{{ "gitbook-plugin-theme-dronecode/images/dronecode_top_bar_logo_small.png"|resolveAsset }}" alt="Dronecode logo (small)" />
+        <a href="{{ config.pluginsConfig['theme-dronecode'].logo.url }}">
+          <img src="{{ config.pluginsConfig['theme-dronecode'].logo.logo_small | resolveAsset }}" alt="Dronecode logo (small)" />
         </a>
       </div>
-      <div class="common_menu_options">
-        <div id="menu_dc" class="common_dronecode_menu_item"><a href="https://www.dronecode.org/">Dronecode</a></div>
-        <div class="common_dronecode_menu_item"><a href="http://px4.io/">PX4</a></div>
-        <div class="common_dronecode_menu_item large_version"><a href="http://qgroundcontrol.com/">QGroundControl</a></div>
-        <div class="common_dronecode_menu_item small_version"><a href="http://qgroundcontrol.com/">QGC</a></div>
-        <div class="common_dronecode_menu_item"><a href="https://www.dronecode.org/sdk/">SDK</a></div>
-        <div class="common_dronecode_menu_item"><a href="https://mavlink.io/en/">MAVLink</a></div>
-        <div class="common_dronecode_menu_item large_version"><a href="https://www.dronecode.org/documentation/">Documentation</a></div>
-        <div class="common_dronecode_menu_item small_version"><a href="https://www.dronecode.org/documentation/">Docs</a></div>
-        <div class="common_dronecode_menu_item large_version"><a href="http://discuss.px4.io/">Support</a></div>
-        <div class="common_dronecode_menu_item small_version"><a href="http://discuss.px4.io/">Help</a></div>
+    
+    
+      <div class="common_menu_options">   
+          {% for menuitem in config.pluginsConfig['theme-dronecode'].menu %}
+            {% if menuitem.text %}<div class="common_dronecode_menu_item large_version"><a href="{{ menuitem.url}}">{{ menuitem.text }}</a></div>{% endif %}
+            {% if menuitem.text_small %}<div class="common_dronecode_menu_item small_version"><a href="{{ menuitem.url}}">{{ menuitem.text_small }}</a></div>{% endif %}
+          {% endfor %}
       </div>
     </div>
     {% endblock %}
